--- a/client-deployment.yml
+++ b/client-deployment.yml
@@ -20,9 +20,16 @@ spec:
       containers:
         - name: client-pod
           image: viktortasevski/room-revamp-fe:latest
+          imagePullPolicy: Always
           envFrom:
             - configMapRef:
                 name: client-config
           ports:
             - containerPort: 3000
-          command: ['serve', '-s', 'build']
+          command:
+            - 'sh'
+            - '-c'
+            - |
+              sed -i 's#__REACT_APP_API_URL__#'"$REACT_APP_API_URL"'#g' public/env.js
+              yarn build
+              serve -s build
