--- a/ingress.yml
+++ b/ingress.yml
@@ -5,6 +5,10 @@ metadata:
 spec:
   stripPrefix:
     forceSlash: false
+    prefixes:
+      - /client
+      - /api
+      - /postgres
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -17,7 +21,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /
+          - path: /client
             pathType: Prefix
             backend:
               service:
