--- a/backend-configMap.yml
+++ b/backend-configMap.yml
@@ -11,7 +11,7 @@ data:
     APP_URL=http://localhost
     API_PORT=8000
 
-    FRONTEND_URL=http://localhost:8000
+    FRONTEND_URL=http://room-revamp.com
 
     LOG_CHANNEL=stack
     LOG_DEPRECATIONS_CHANNEL=null
