--- a/jenkins-deployment.yml
+++ b/jenkins-deployment.yml
@@ -11,7 +11,7 @@ data:
     APP_URL=http://localhost
     API_PORT=8000
 
-    FRONTEND_URL=http://localhost:3000
+    FRONTEND_URL=http://room-revamp.com
 
     LOG_CHANNEL=stack
     LOG_DEPRECATIONS_CHANNEL=null
@@ -145,7 +145,7 @@ kind: ConfigMap
 metadata:
   name: client-config
 data:
-  REACT_APP_API_URL: http://localhost:8000/api
+  REACT_APP_API_URL: http://api.room-revamp.com/api
   GENERATE_SOURCEMAP: 'false'
 
 ---
@@ -154,7 +154,7 @@ kind: Deployment
 metadata:
   name: client-deployment
 spec:
-  replicas: 2
+  replicas: 1
   strategy:
     type: RollingUpdate
     rollingUpdate:
